<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
    <!--android:id="@+id/txt"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Hello world!"-->
    <!--android:textSize="20sp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent"></TextView>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/crypto_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" />

</android.support.constraint.ConstraintLayout>